Ya todo esta listo, detalles de front

--- a/TiendaFrontInventario/Pages/Check-in.razor
+++ b/TiendaFrontInventario/Pages/Check-in.razor
@@ -328,7 +328,7 @@
     protected void SelectProduct(Productos item)
     {
         CodigoSeleccionado = item.CodigoProducto;
-        PrecioUnitario = item.PrecioVenta;
+        PrecioUnitario = item.PrecioCompra;
         ProductName = item.NombreProducto;
     }
 
